third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/unconditional-recursion.stderr
error[E0425]: cannot find value `__FAIL__` in this scope
 --> tests/ui/unconditional-recursion.rs:8:5
  |
8 |     __FAIL__;
  |     ^^^^^^^^ not found in this scope

warning: function cannot return without recursing
 --> tests/ui/unconditional-recursion.rs:4:9
  |
4 | #[error("{self}")]
  |         ^^^^^^^^
  |         |
  |         cannot return without recursing
  |         recursive call site
  |
  = help: a `loop` may express intention better if this is on purpose
note: the lint level is defined here
 --> tests/ui/unconditional-recursion.rs:4:9
  |
4 | #[error("{self}")]
  |         ^^^^^^^^
