third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/unconditional-recursion.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error("{self}")]
pub struct Error;

fn main() {
    __FAIL__;
}
